# MusicGenreClassification

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
music_genre_classifier/: inference.py  model.py  preprocessing.py  train.py  training.py
music_genre_classifier/data_managment/: dataset.py
music_genre_classifier/dataset/: get_dataset.md
music_genre_classifier/models/: cnn.py
orchestation/dags/: music_genre_classification_dag.py
