[tool.poetry]
name = "music-genre-classifier"
version = "0.1.0"
description = ""
authors = ["francobach47 <francobach47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.21.5"
librosa = "0.10.0"
torch = "2.0.0"
scikit-learn = "1.0.2"
natsort = "8.3.1"
matplotlib = "3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
